# esp32-timelapse

./: README.md
.github/workflows/: release.yml
esp-32/: .env.example  data.txt  justfile  load-env.py  platformio.ini  test.md
esp-32/include/: cam.hpp  counter.hpp  defs.hpp  eeprom.hpp  esp_defs.h  esp_defs.hpp  file.hpp  net.hpp  sleep.hpp  time.hpp  wifi.hpp
esp-32/lib/Cam/: library.json
esp-32/lib/Cam/src/: Cam.cpp  Cam.hpp  defs.hpp
esp-32/lib/Core/src/: Core.cpp  Core.hpp
esp-32/lib/Debug/: library.json
esp-32/lib/Debug/src/: Debug.cpp  Debug.hpp
esp-32/lib/EEprom/: library.json
esp-32/lib/EEprom/src/: EEprom.cpp  EEprom.hpp
esp-32/lib/Net/: library.json
esp-32/lib/Net/src/: Net.cpp  Net.hpp
esp-32/lib/Storage/: library.json
esp-32/lib/Storage/src/: Storage.cpp  Storage.hpp
esp-32/lib/Wifi/: library.json
esp-32/lib/Wifi/src/: Wifi.cpp  Wifi.hpp
esp-32/lib/cam/: cam.cpp  cam.hpp  defs.hpp
esp-32/lib/eeprom/: eeprom.cpp  eeprom.hpp
esp-32/lib/net/: defs.hpp  net.cpp  net.hpp
esp-32/lib/sleep/: defs.hpp  sleep.cpp
esp-32/lib/wifi/: defs.hpp  wifi.cpp
esp-32/other/: ota.ino
esp-32/other/file/: file.cpp  file.hpp
esp-32/src/: Main.cpp  cam.cpp  counter.cpp  eeprom.cpp  esp32-cam.cpp  file.cpp  main.cpp  net.cpp  sleep.cpp  time.cpp  wifi.cpp
server/: .gitignore  Cargo.toml  Containerfile  Dockerfile  README.md  docker-compose.yml  docker-entry.sh
server/src/: consts.rs  export.rs  handlers.rs  main.rs
