[package]
name = "esp-32-img-server"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = { version = "0.4.31", features = [] }
rand = "0.8.5"
tokio = { version = "1.0", features = ["full"] }
