[package]
name = "esp-32-img-server"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = { version = "=0.8.7", features = ["macros"] }
tracing = { version = "0.1.43", features = ["default"] }
serde = { version = "=1.0.228", features = ["derive"] }
chrono = "=0.4.42"
rand = "=0.9.2"
tokio = { version = "=1.48.0", features = ["full"] }
tracing-subscriber = { version = "=0.3.22", features = ["fmt", "env-filter", "ansi"], default-features = false }